# Cinematch-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: project.mdc
data/: sample_movies.csv
scripts/: prepare_dataset.py
src/cinematch/: __init__.py  main.py
src/cinematch/api/: __init__.py  movielens_routes.py  routes.py
src/cinematch/data/: __init__.py  loader.py  pipeline.py  preprocess.py  schema.py
src/cinematch/data/movielens/: __init__.py  cache.py  csv_io.py  dataset.py  load.py  preprocess.py  schema.py
src/cinematch/recommend/: __init__.py  collaborative.py  content.py  engine.py  movielens_content.py
src/cinematch/static/: index.html
src/cinematch/static/css/: style.css
src/cinematch/static/js/: recommendations.js
tests/: test_api.py  test_content.py  test_loader.py  test_movielens.py  test_movielens_recommend.py  test_pipeline.py  test_preprocess.py  test_recommend.py  test_static_ui.py
tests/fixtures/movielens/: movies.csv  ratings.csv
